--- a/Week4/W4.1C08_Finally_Block/W4.1C08_Finally_Block.csproj
+++ b/Week4/W4.1C08_Finally_Block/W4.1C08_Finally_Block.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>W4._1C06_Files___Exceptions</RootNamespace>
+    <RootNamespace>W4._1C08_Finally_Block</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
